To be safe, use 1.4 APIs for agent.